# hex-wrapper

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  macros.rs  nonzero.rs  zeroable.rs
