[package]
name = "hex-wrapper"
version = "1.3.0"
edition = "2021"
authors = ["Masato Nakata <masaton@naughie.com>"]
description = "Wrappers of the convertion between numbers and hex strings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/naughie/hex-wrapper"
documentation = "https://docs.rs/hex-wrapper"
keywords = ["serde", "serialization", "hex"]
categories = ["encoding"]
readme = "README.md"
include = ["src/", "LICENSE-*", "README.md"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
db = ["diesel"]

[dependencies]
serde = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }

[dependencies.diesel]
version = "1.4"
default-features = false
optional = true
